<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/player_profile_tl_batfield_avg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:shrinkColumns="*"
    android:stretchColumns="*">

    <!-- Row 1 - batting and bowling headers -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#b0b0b0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/player_profile_table_text_padding"
            android:text=""
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:text="@string/matches"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:text="@string/runs"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:text="@string/highest"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:text="@string/average"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:text="@string/hundred"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:text="@string/fifty"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />
    </TableRow>

    <!-- Row 2 - Tests - Batting and fielding values -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#dcdcdc">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:text="@string/tests"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_tests_matches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_tests_runs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_tests_highest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_tests_avg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_tests_100s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_tests_50s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />
    </TableRow>

    <!-- Row 3 - ODIs - Batting and fielding values -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#dcdcdc">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:text="@string/odis"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_odis_matches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_odis_runs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_odis_highest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_odis_avg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_odis_100s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />

        <TextView
            android:id="@+id/player_profile_bat_field_avg_tv_odis_50s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/player_profile_table_text_padding"
            android:textColor="#000"
            android:textSize="@dimen/player_profile_text_size" />
    </TableRow>
</TableLayout>